cursive-bootstrap/tests/ui/E-MOD/E-MOD-2433.cursive
// RUN: compile-fail
// DIAG: E-MOD-2433
// SPEC: 8.2
// DESC: Module-scope var declaration with public visibility

public var counter: i32 = 0  //~ ERROR E-MOD-2433: public var at module scope

public procedure main(move ctx: Context) -> i32 {
    return counter
}
